[WPE][Debug]: fast/mediastream/captureStream/canvas3d.html crashes with error gst_sample_get_caps: assertion 'GST_IS_SAMPLE (sample)' failed https://bugs.webkit.org/show_bug.cgi?id=259915

Reviewed by Carlos Garcia Campos.

Report video frame conversion errors and gracefully handle them in the player.

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::videoFrameForCurrentTime):
* Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.cpp:
(WebCore::VideoFrameGStreamer::convert):

Canonical link: https://commits.webkit.org/266723@main